--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                         </h1>
                                 </section>
                                 <section">
-                                  <table border="1px" class="tabla2">
+                                  <table  class="tabla2">
                                     <tr>
                                         <td><a href="./laboratorio.html"><img src="./img/images.png" alt="img" width="180rem"></a></td>
                                         <td><img src="./img/descarga (1).png" alt="img" width="180rem"></td>
